--- a/rc/mc.ext.ini
+++ b/rc/mc.ext.ini
@@ -1109,8 +1109,8 @@ View=%view{ascii} /usr/lib/mc/ext.d/archive.sh view cpio
 Open=%var{EDITOR:editor} %f
 
 [Include/image]
-Open=/usr/lib/mc/ext.d/image.sh open ALL_FORMATS
-View=%view{ascii} imgcat %f
+Open=imgcat %f; head -c1 < /dev/tty > /dev/null
+View=imgcat %f; head -c1 < /dev/tty > /dev/null
 
 [Include/video]
 Open=/usr/lib/mc/ext.d/video.sh open ALL_FORMATS
